k8s/k8s.yml
kind: Service
apiVersion: v1
metadata:
  name: "rabbitmq"
spec:
  selector:
    app: "rabbitmq"
  ports:
    - protocol: "TCP"
      port: 5672
      targetPort: 5672
---
kind: Service
apiVersion: v1
metadata:
  name: "server"
spec:
  type: NodePort
  selector:
    app: "server"
  ports:
    - name: server
      port: 3001
      targetPort: 3001
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: "server"
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "server"
              servicePort: 3001
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: master
          image: rabbitmq
          ports:
            - containerPort: 5672
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: worker
spec:
  selector:
    matchLabels:
      app: worker
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 2
  template:
    metadata:
      labels:
        app: worker
    spec:
      serviceAccountName: term-project-worker
      volumes:
        - name: cloudsql
          emptyDir: { }
      containers:
        - name: cloud-sql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.16
          command:
            - "/cloud_sql_proxy"
            - "-instances=cedar-booth-287414:us-central1:term-project=tcp:5432"
          volumeMounts:
            - name: cloudsql
              mountPath: /cloudsql
        - name: master
          image: gcr.io/cedar-booth-287414/term-project-worker
          volumeMounts:
            - name: cloudsql
              mountPath: /cloudsql
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: server
spec:
  selector:
    matchLabels:
      app: server
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: server
    spec:
      serviceAccountName: term-project-server
      volumes:
        - name: cloudsql
          emptyDir: { }
      containers:
        - name: cloud-sql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.16
          command:
            - "/cloud_sql_proxy"
            - "-instances=cedar-booth-287414:us-central1:term-project=tcp:5432"
          volumeMounts:
            - name: cloudsql
              mountPath: /cloudsql
        - name: server
          image: gcr.io/cedar-booth-287414/term-project-server
          volumeMounts:
            - name: cloudsql
              mountPath: /cloudsql
          readinessProbe:
            httpGet:
              path: /health
              port: 3001
          ports:
            - containerPort: 3001
